--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,12 +4,14 @@ $price-color: #8199CF;
 body {
   background: $background-color;
   font-family: 'Open Sans', sans-serif;
+  margin-bottom: 0;
 }
 
 h1 {
   text-align: center;
   color: #ffffff;
 }
+
 
 .filter-container {
   display: flex;
@@ -48,6 +50,12 @@ h1 {
   width: 100%;
   padding-top: 3%;
 
+  h4 {
+    text-align: center;
+    color: #ffffff;
+    width: 100%;
+  }
+
   .col {
     width: calc(100% / 3);
     text-align: center;
@@ -59,10 +67,22 @@ h1 {
       padding: 3px;
     }
 
+    figcaption {
+      text-align: center;
+      font-size: 11px;
+      color: #ffffff;
+    }
+
     h4, h5 {
       color: #ffffff;
       margin: 5px 0;
       font-weight: 600;
+    }
+
+    .potion-name {
+      color: #ffffff;
+      margin: 5px;
+      font-size: 18px;
     }
 
     .tags, .required-level {
@@ -97,4 +117,12 @@ h1 {
       }
     }
   }
+}
+
+footer {
+  background-color: #8199CF;
+  color: #ffffff;
+  text-align: center;
+  padding: 8px;
+  margin: 0 -8px;
 }
